2009-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Database/AddinDatabase.cs: Add missing null
	  check.

2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Description/Extension.cs: Allow Not condition.

	* Mono.Addins.Database/AddinUpdateData.cs: Added some verbose
	  logging.

	* Mono.Addins.Database/AddinScanner.cs:
	* Mono.Addins.Database/AddinDatabase.cs:
	* Mono.Addins.Database/AddinScanResult.cs: Split the
	  AddinsToUpdateRelation list in two. AddinsToUpdate contains
	  addins that have been modified and whose extensions have to
	  be registered again. AddinsToUpdateRelation now contains
	  addins which have not been directly modified, but which are
	  dependencies of modified add-ins. The extensions of those
	  add-ins won't be processed, they will just include the new
	  extensions from the updated add-ins.

	* Mono.Addins.Database/SetupDomain.cs: Remove debug messages.

2009-10-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/AddinSessionService.cs: Pre-jit the assembly
	  loader hook.

2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: Bump Mono.Addins version.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Added a new project which Implements an msbuild
	  task for resolving add-in references.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/ExtensionContext.cs: Fix potentiall nullref.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/AddinRegistry.cs: Allow reading add-in manifests
	  even if the registry is not fully initialized.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: Update target framework to 2.0.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Database/AddinScanner.cs: Properly read
	  InserBefore and InsertAfter attribute properties. Patch by
	  Levi Bard.

2009-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: Properly sign assemblies.
